--- a/pages/docs/dragonite/troubleshooting.mdx
+++ b/pages/docs/dragonite/troubleshooting.mdx
@@ -14,8 +14,8 @@ import { Callout } from 'nextra-theme-docs'
     - **Quest Mode** is Enabled
     - **Quest Hours** has at least one number in the Array.
 
-     <Callout type="info" emoji="🚧">
-       Validate your Quest Hours are saved properly inside your database! [Issue #10](https://github.com/UnownHash/Dragonite-Public/issues/10)
+     <Callout type="info" emoji="ℹ️">
+       Validate your Quest Hours are saved inside your database! [Issue #10](https://github.com/UnownHash/Dragonite-Public/issues/10)
      </Callout>
 
 
