--- a/pages/docs/other/terminology.mdx
+++ b/pages/docs/other/terminology.mdx
@@ -1,4 +1,3 @@
-
 # Terminology
 
 This page includes definitions for most of the commonly used components used within the Unown# stack.
@@ -10,6 +9,10 @@ Niantic Pokemon Trainer Club (PTC) accounts that can be used with the Pokemon Go
 ##### Area
 
 Areas encapsulates a Geofence, Routes, and scheduled events. Koji can drastically speed up your ability to create and manage these as your Areas grow or change.
+
+##### Devices
+
+Devices are physical objects that generally run iOS or Android in order to play the Pokemon Go game.
 
 ##### numWiEnc (Golbat database table)
 
@@ -34,6 +37,10 @@ This mode can be used to send workers on a pre-defined route in order to catch P
 ##### Scout Mode
 
 This mode can be considered an On-Demand scan mode. Once workers are added to this pool end users can use a tool like [ReactMap](./other/third-party) to send workers to specific locations around the world. Useful to get data for rare pokemon or locations outside of regular scan regions.
+
+##### MITM client
+
+MITM (Man in the Middle) client is a third party solution, normally paid, that is required to collect game data. Unown# is not affiliated with any particular provider.
 
 ##### Websockets (`ws://`)
 
