Update Dragonite route creation FAQ

--- a/pages/docs/dragonite/faq.mdx
+++ b/pages/docs/dragonite/faq.mdx
@@ -18,15 +18,23 @@ Dragonite sends requests to Koji to create routes. The default settings for each
 
 **Pokemon (Bootstrap)**
 
-TBD
+-   Mode: Bootstrap
+-   Radius: 70 (meters)
 
 **Fort**
 
-TBD
+-   Mode: Cluster
+-   Category: Fort
+-   Strategy: S2
+-   S2 Level: Level 15
+-   S2 Size: 9x9
 
 **Fort Full**
 
-TBD
+-   Mode: Bootstrap
+-   Strategy: S2
+-   S2 Level: Level 15
+-   S2 Size: 9x9
 
 ##### Q: What logging options should I use?
 
