--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -4,7 +4,7 @@ import { Callout } from 'nextra-theme-docs'
 
 ## Prerequisites
 
-- [Docker](https://docs.docker.com/engine/install/)
+- [Docker](https://docs.docker.com/engine/install/) - If you are not familiar working with Docker see [Standard Setup](https://unownhash.com/docs/setup/standard)
 - Compatible Database - See [Database Setup](/docs/other/database)
 
 ## Install services with Docker
