--- a/pages/docs/golbat/config.mdx
+++ b/pages/docs/golbat/config.mdx
@@ -94,6 +94,7 @@ nearby_pokemon = false # disables cell/pokestop Pokémon
 **⭐ Advanced Option ⭐**
 
 ```toml
+[tuning]
 extended_timeout = true
 max_pokemon_results = 3000
 ```
