--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -131,7 +131,7 @@ import { Callout } from 'nextra-theme-docs'
 
     Using Golbat's gRPC endpoint (default port 50001) is recommended over the raw endpoint (default 9001).
 
-    ```toml filename="dragonite_config.toml" {2,5,7,9,11-16}
+    ```toml filename="dragonite_config.toml" {2,5-7,9,11-16}
     [rotom]
     endpoint = "ws://rotom:7071"
 
@@ -143,14 +143,14 @@ import { Callout } from 'nextra-theme-docs'
     golbat_grpc_endpoint = "golbat:50001"
 
     [db]
-    host = "127.0.0.1"
+    host = "db" 
     port = 3306
     user = ""
     password = ""
     name = "dragonite"
     ```
 
-    ```toml filename="golbat_config.toml" {1,2,4, 7-10}
+    ```toml filename="golbat_config.toml" {1-4, 7-10}
     port = 9001             # Listening port for golbat
     grpc_port = 50001       # Listening port for grpc
     raw_bearer = ""         # Raw bearer (password) required
@@ -159,11 +159,11 @@ import { Callout } from 'nextra-theme-docs'
     [database]
     user = ""
     password = ""
-    address = "127.0.0.1:3306"
-    db = ""
+    address = "db:3306"
+    db = "golbat"
     ```
 
-    **Highly recommend** setting secret if Rotom is accessible from the public internet.
+    It is **highly recommended** setting a secret if Rotom is accessible from the public internet.
 
     ```json filename="rotom_config.json"
     "deviceListener": {
