--- a/pages/docs/golbat/index.mdx
+++ b/pages/docs/golbat/index.mdx
@@ -9,7 +9,7 @@ One of Golbat's best features is that pokemon encounters are stored in memory. T
 Any client that is able to output raw game protos should technically be parsable by Golbat. We offer limited support for the following clients.
 
 - [Atlas/Aegis](https://pokemod.dev/mapping) (Android)
-- [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (iOS and Android)
-- [PogoDroid](https://github.com/Map-A-Droid/MAD)
+- [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (Mac, iOS and Android)
+- [PogoDroid](https://github.com/Map-A-Droid/MAD) (Android)
 
 If any MITM developer would like to be fully compliant with Golbat's parsing specifications feel free to reach out on [Discord](./docs/help).
