--- a/pages/docs/dragonite/index.mdx
+++ b/pages/docs/dragonite/index.mdx
@@ -31,4 +31,4 @@ Dragonite is **closed source** software. We are releasing compiled binaries to t
 ## Supported MITM clients
 
 - [Aegis](https://pokemod.dev/mapping) (Android)
-- [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (Mac, iOS and Android)
+- [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
