Update supported MITMs and Prometheus section (#29)
* Update supported MITM clients

* updates

* macOS

--- a/pages/docs/dragonite/index.mdx
+++ b/pages/docs/dragonite/index.mdx
@@ -30,4 +30,5 @@ Dragonite is **closed source** software. We are releasing compiled binaries to t
 
 ## Supported MITM clients
 
-- [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (iOS and Android)
+- [Aegis](https://pokemod.dev/mapping) (Android)
+- [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
