--- a/pages/docs/rotom/index.mdx
+++ b/pages/docs/rotom/index.mdx
@@ -8,7 +8,8 @@ Rotom communicates via websockets (`ws://`) to devices and Dragonite. This commu
 
 ## Supported MITM clients
 
--   [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (iOS and Android)
+-   [Aegis](https://pokemod.dev/mapping) (Android)
+-   [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
 
 ## How MITM clients communicate with Rotom?
 
