--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -76,8 +76,8 @@ bearer_token = "KOJI_SECRET"
 
 | Key | Default | Description |
 | :-- | :-- | :-- |
-| `required_level` | 30 | (Advanced) Minimum account level required to be used for scanning/questing. This only accepts level 30-40. |
-| `leveling_level` | 30 | (Advanced) Maximum level an account should reach during the leveling process. This only accepts level 30-32. |
+| `required_level` | 30 | Minimum account level required to be used for scanning/questing. This only accepts level 30-40. |
+| `leveling_level` | 30 | Maximum level an account should reach during the leveling process. This only accepts level 30-32. |
 
 ## Rotom section
 
