add cosmog to supported mitms

--- a/pages/docs/golbat/index.mdx
+++ b/pages/docs/golbat/index.mdx
@@ -9,6 +9,7 @@ One of Golbat's best features is that pokemon encounters are stored in memory. T
 Any client that is able to output raw game protos should technically be parsable by Golbat. We offer limited support for the following clients.
 
 - [Atlas/Aegis](https://pokemod.dev/mapping) (Android)
+- [Cosmog](https://sylvie.fyi/cosmog) (Android, Ampere VPSes)
 - [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
 - [PogoDroid](https://github.com/Map-A-Droid/MAD) (Android)
 
