--- a/pages/docs/dragonite/index.mdx
+++ b/pages/docs/dragonite/index.mdx
@@ -31,4 +31,5 @@ Dragonite is **closed source** software. We are releasing compiled binaries to t
 ## Supported MITM clients
 
 - [Aegis](https://pokemod.dev/mapping) (Android)
+- [Cosmog](https://sylvie.fyi/cosmog) (Android, Ampere VPSes)
 - [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
