--- a/pages/docs/rotom/index.mdx
+++ b/pages/docs/rotom/index.mdx
@@ -9,7 +9,9 @@ Rotom communicates via websockets (`ws://`) to devices and Dragonite. This commu
 ## Supported MITM clients
 
 -   [Aegis](https://pokemod.dev/mapping) (Android)
+-   [Cosmog](https://sylvie.fyi/cosmog) (Android, Ampere VPSes)
 -   [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
+
 
 ## How MITM clients communicate with Rotom?
 
