--- a/pages/docs/other/fletchling.mdx
+++ b/pages/docs/other/fletchling.mdx
@@ -17,7 +17,7 @@ import Image from 'next/image'
 
 ## Showcase
 
-Below are examples of the final results in different applications.
+Below are examples of the end result in different applications.
 
 <Tabs items={['ReactMap']}>
   <Tabs.Tab>
