fix typo in drago logs section

--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -107,7 +107,7 @@ save = true
 | `save` | true | When enabled Dragonite will write log files to disk. |
 | `debug` | false | When enabled Dragonite will write debug logging, which is very "chatty" and not required for general usage. |
 | `max_size` | 500 | Max size that Dragonite will allow log files to grow before being deleted. |
-| `debug` | 30 | Time that logs will live on disk in days before Dragonite deletes the log file. |
+| `max_age` | 30 | Time that logs will live on disk in days before Dragonite deletes the log file. |
 
 ## Processors section
 
