add gmo to the terminology section
* Added get map objects to the terminology page

--- a/pages/docs/other/terminology.mdx
+++ b/pages/docs/other/terminology.mdx
@@ -49,3 +49,7 @@ Websockets are a standard communication protocol much like web traffic that occu
 ##### Worker
 
 Workers are added to a pool inside of Rotom which can be allocated by Dragonite to different Areas. Physical device creates 1-many workers which can then handle different scanning tasks.
+
+##### GMO
+
+GMO stands for "Get Map Objects" and refers to the process of getting the map objects from the Pokemon Go servers, or the data that is displayed on the map itself.
