--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -51,6 +51,7 @@ enable = true
 # token_refresh_only = true
 ```
 
+⚠ Additional config variables, but only put them if you know what you do ⚠
 | Key | Default | Description |
 | :-- | :-- | :-- |
 | token_refresh_concurrency | 10 | define concurrency for the token background refresher |
