--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -12,6 +12,7 @@ import { Callout } from 'nextra-theme-docs'
 [general]
 api_host = 127.0.0.1
 api_port = 7272
+instance_name = production # used by admin to show in the instance selection 
 stats = true  #Enabled by default to write worker stats.
 ...
 ```
