--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -20,7 +20,7 @@ stats = true  #Enabled by default to write worker stats.
 | :-- | :-- | :-- |
 | `api_host` | 127.0.0.1 | Host listener address for Dragonite API. |
 | `api_port` | 7272 | Host port address for Dragonite API. |
-| instance_name | "" | Display name of the instance in the admin instance selection |
+| `instance_name` | "" | Display name of the instance in the admin instance selection |
 | `stats` | true | Whether raw worker stats are written to the Dragonite database. |
 
 ## Auth provider section
