--- a/pages/docs/setup/standard.mdx
+++ b/pages/docs/setup/standard.mdx
@@ -96,7 +96,7 @@ import { Callout } from 'nextra-theme-docs'
   To compile a static binary run
 
   ```sh
-  go build
+  make
   ```
 
 </Callout>
@@ -291,7 +291,7 @@ Since each service is an individual component it is possible to update just one.
 1. Pull latest git changes and compile
 
     ```sh
-    git pull && go build
+    git pull && make
     ```
 
 1. Restart service
