--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -52,7 +52,7 @@ import { Callout } from 'nextra-theme-docs'
           #ADMIN.BACKENDS.1.GOLBAT_ENDPOINT=http://golbat:9002
           #ADMIN.BACKENDS.1.GOLBAT_API_SECRET=""
         ports:
-          - '7273:7273' # change left one for external port
+          - "7273:7273" # change left one for external port
       golbat:
         image: ghcr.io/unownhash/golbat:main
         container_name: golbat
