fix: docker setup admin example

--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -42,11 +42,11 @@ import { Callout } from 'nextra-theme-docs'
           ADMIN.GENERAL.USERNAME=admin
           ADMIN.GENERAL.PASSWORD=password
           ADMIN.GENERAL.LOG_LEVEL=info
-    #      ADMIN.GENERAL.API_SECRET=
+          ADMIN.GENERAL.API_SECRET=''
 
           ADMIN.BACKENDS.0.DRAGONITE_ENDPOINT=http://dragonite:7272
           ADMIN.BACKENDS.0.GOLBAT_ENDPOINT=http://golbat:9001
-          ADMIN.BACKENDS.0.GOLBAT_API_SECRET=''
+    #      ADMIN.BACKENDS.0.GOLBAT_API_SECRET=
 
     #      ADMIN.BACKENDS.1.DRAGONITE_ENDPOINT=http://dragonite:7274
     #      ADMIN.BACKENDS.1.GOLBAT_ENDPOINT=http://golbat:9002
