Add --=FurtiF™=-- Tools to supported mitms

--- a/pages/docs/rotom/index.mdx
+++ b/pages/docs/rotom/index.mdx
@@ -11,6 +11,7 @@ Rotom communicates via websockets (`ws://`) to devices and Dragonite. This commu
 -   [Aegis](https://pokemod.dev/mapping) (Android)
 -   [Cosmog](https://sylvie.fyi/cosmog) (Android, Ampere VPSes)
 -   [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
+-   [--=FurtiF™=-- Tools](https://discord.gg/wtNgst3W64) (Android)
 
 
 ## How MITM clients communicate with Rotom?
