Add --=FurtiF™=-- Tools to supported mitms in missed pages

--- a/pages/docs/dragonite/index.mdx
+++ b/pages/docs/dragonite/index.mdx
@@ -33,3 +33,4 @@ Dragonite is **closed source** software. We are releasing compiled binaries to t
 - [Aegis](https://pokemod.dev/mapping) (Android)
 - [Cosmog](https://sylvie.fyi/cosmog) (Android, Ampere VPSes)
 - [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
+- [--=FurtiF™=-- Tools](https://discord.gg/wtNgst3W64) (Android)
