--- a/pages/docs/golbat/index.mdx
+++ b/pages/docs/golbat/index.mdx
@@ -12,5 +12,6 @@ Any client that is able to output raw game protos should technically be parsable
 - [Cosmog](https://sylvie.fyi/cosmog) (Android, Ampere VPSes)
 - [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (macOS, iOS and Android)
 - [PogoDroid](https://github.com/Map-A-Droid/MAD) (Android)
+- [--=FurtiF™=-- Tools](https://discord.gg/wtNgst3W64) (Android)
 
 If any MITM developer would like to be fully compliant with Golbat's parsing specifications feel free to reach out on [Discord](./docs/help).
