client.port -> client.host in Rotom settings

--- a/pages/docs/setup/standard.mdx
+++ b/pages/docs/setup/standard.mdx
@@ -125,7 +125,7 @@ import { Callout } from 'nextra-theme-docs'
 
     Please note Rotom does not have any authentication for it's web client. It is recommended that you run this service on your internal network, behind a Firewall, or protected by a cloud based application layer.
 
-    - The `client.port` might need to be updated to `0.0.0.0` depending on how you run your server.
+    - The `client.host` might need to be updated to `0.0.0.0` depending on how you run your server.
     - You can also modify the monitoring values however it is unclear if they are actually used by any MITM tools at this time.
 
 1. Install the dependencies
