--- a/pages/docs/setup/standard.mdx
+++ b/pages/docs/setup/standard.mdx
@@ -4,8 +4,8 @@ import { Callout } from 'nextra-theme-docs'
 
 ## Prerequisites
 
-- [Go 1.22](https://go.dev/doc/install)
-- [Node 18](https://nodejs.org/en/download)
+- [Go 1.23](https://go.dev/doc/install)
+- [Node >= 20.8](https://nodejs.org/en/download)
 - [Git](https://git-scm.com/downloads) _(`git` might be pre-installed)_
 - [PM2](https://pm2.io/docs/runtime/guide/installation/) `npm install -g pm2` or `yarn global add pm2`
 - [jq](https://jqlang.github.io/jq/download/) `sudo apt-get install jq`
